refactor(library): Review-Findings in der Vaadin-Bruecke beheben
- ColumnValueExtractor: zustandslos (statische Methoden) statt Instanz pro
  Export; das reflektierte Vaadin-Feld ColumnPathRenderer.provider wird einmalig
  aufgeloest und gecacht. InaccessibleObjectException (Modulsystem) wird
  abgefangen und meldet den fehlenden Zugriff klar beim Gebrauch.
- GridExcelExporter.fetchAll: Raw-Type-Cast entfernt (typisierter
  DataProvider<T,Object> + Query<>), nur noch @SuppressWarnings("unchecked").
- GridExcelExporter: Speicher-Warnung im Javadoc der In-Memory-Ueberladungen
  (Vaadin-DataProvider materialisiert alle Zeilen) mit Verweis auf den
  out-of-core-Pfad; Collectors.toList() -> .toList().
- ExportOptions: Null-Guards fuer die with*-Varargs.